--- a/client/src/widgets/Sidebar/Sidebar.module.css
+++ b/client/src/widgets/Sidebar/Sidebar.module.css
@@ -188,7 +188,7 @@
   position: relative;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
   .miniPlayer {
     display: none;
   }
